overflow fix

--- a/src/Pages/HomeTop/HomeTop.css
+++ b/src/Pages/HomeTop/HomeTop.css
@@ -128,6 +128,7 @@ ul.plus {
 
 ul.plus li {
   padding-left: 30px; 
+  line-height: 25px;
 }
 
 ul.plus li::before {
