--- a/src/Pages/Page4/virtual.css
+++ b/src/Pages/Page4/virtual.css
@@ -2,6 +2,8 @@
     main[role="main"] {
         /* padding-top: 98px; */
         padding: 10px;
+        overflow: hidden;
+        margin-right: 20px;
     }
 }
 
@@ -44,7 +46,7 @@
 }
 }
 .row3 {
-    margin-right: -15px;
+    /* margin-right: -15px; */
     margin-left: -15px;
     margin-bottom: 50px;
 }
@@ -59,12 +61,17 @@
 
 .color-orange {
     color: #F8B500;
-    font-size: 50px;
+    padding-top: 50px;
+    font-size: 40px;
     margin-top: 50px;
 }
 .color-orange2 {
     color: #F8B500;
 }
+/* .colsm-12{
+    font-size: 20px;
+    line-height: 35px;
+} */
 
 .page-top-virtualphone h2 {
     margin-bottom: 18px;
@@ -91,6 +98,8 @@ h2 {
 p {
     margin-top: 0;
     margin-bottom: 1rem;
+    font-size: 20px;
+    line-height: 30px;
 }
 
 .card-header {
